fixes header/modal overlap issue

--- a/app/assets/stylesheets/projects.css.scss
+++ b/app/assets/stylesheets/projects.css.scss
@@ -120,6 +120,10 @@ body {
   
 }
 
+.navbar-fixed-top {
+  z-index: 9999;
+}
+
 .solo {
 
 }
